google font, and song Young and Beautiful by Lana Del Ray

--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -1,21 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, intial-scale=1">
-    </head>
-    <body>
-        <header>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, intial-scale=1" />
+    <title>Young and Beautiful- Lana Del Ray</title>
+    <!-- Google Fonts
+       Fonts used: Playfair Display (headings), Merriweather (body)
+       Source: https://fonts.google.com/
+  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Merriweather:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
 
-        </header>
-        <main>
-
-
-        </main>
-        <footer>
-            <p>
-                <small>Built by Melika Kashef</small>
-            </p>
-        </footer>
-    </body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header></header>
+    <main></main>
+    <footer>
+      <p>
+        <small>Built by Melika Kashef</small>
+      </p>
+    </footer>
+  </body>
 </html>
