general html structure and format

--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -18,12 +18,82 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header>
+      <h1>Young and Beautiful</h1>
+      <p>By Lana Del Ray</p>
+    </header>
+    <main>
+      <article>
+        <section>
+          <h2>Why this song matters to me</h2>
+          <p>
+            This song matters to me because of its connection to
+            <em>The Great Gatsby</em> and the way it captures a sad yet jazzy
+            atmosphere that feels both glamorous and fragile. The music sounds
+            timeless, as if it belongs to another era, while the lyrics express
+            a quiet fear of losing love and value over time. I have often
+            noticed that this song is played at memorials for young people,
+            which gives it an even deeper emotional weight. For me, it
+            represents the beauty of youth, the sadness of its fragility, and
+            the question of whether love remains when everything else fades.
+          </p>
+        </section>
+        <section>
+          <h2>Listen</h2>
+          <figure>
+            <iframe
+              style="border-radius: 12px"
+              src="https://open.spotify.com/embed/track/0fLwCeqSjUjHdpDrcQDYIn"
+              width="100%"
+              height="152"
+              frameborder="0"
+              allowfullscreen
+              allow="
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                fullscreen;
+                picture-in-picture;
+              "
+              loading="lazy"
+            >
+            </iframe>
+
+            <figcaption>
+              <small>
+                “Young and Beautiful” by Lana Del Rey, written for the film
+                <em>The Great Gatsby</em> (2013).
+              </small>
+            </figcaption>
+          </figure>
+        </section>
+      </article>
+      <aside>
+        <section>
+          <h2>About the artist</h2>
+          <p>
+            Lana Del Rey is an American singer and songwriter known for her
+            cinematic sound and nostalgic aesthetic. Her music often explores
+            themes of love, loss, fame, and identity, drawing inspiration from
+            vintage Americana and classic Hollywood imagery. “Young and
+            Beautiful” reflects her signature style by blending emotional
+            vulnerability with lush orchestration. The song became widely
+            recognized for its role in <em>The Great Gatsby</em>, where it
+            reinforced the film’s themes of glamour, longing, and impermanence.
+          </p>
+        </section>
+      </aside>
+    </main>
     <footer>
       <p>
         <small>Built by Melika Kashef</small>
       </p>
     </footer>
+    <p>
+      <small>
+        Audio playback provided via Spotify embed. Fonts provided by
+        <a href="https://fonts.google.com/">Google Fonts</a>.
+      </small>
+    </p>
   </body>
 </html>
