--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -78,7 +78,23 @@
             loper.spotify.com/documentation/embeds/
          -->
 
-           <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/1D92WOHWUI2AGQCCdplcXL?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe
+              data-testid="embed-iframe"
+              style="border-radius: 12px"
+              src="https://open.spotify.com/embed/album/1D92WOHWUI2AGQCCdplcXL?utm_source=generator"
+              width="100%"
+              height="352"
+              frameborder="0"
+              allowfullscreen=""
+              allow="
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                fullscreen;
+                picture-in-picture;
+              "
+              loading="lazy"
+            ></iframe>
 
             <figcaption>
               <small>
@@ -118,6 +134,9 @@
           Audio playback provided via Spotify embed. Fonts provided by
           <a href="https://fonts.google.com/">Google Fonts</a>.
         </small>
+      </p>
+      <p>
+        <small> Audio is embedded via Spotify for educational purposes. </small>
       </p>
     </footer>
   </body>
