added poster image

--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -98,7 +98,13 @@
               height="352"
               frameborder="0"
               allowfullscreen
-              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              allow="
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                fullscreen;
+                picture-in-picture;
+              "
               loading="lazy"
             ></iframe>
 
@@ -126,6 +132,15 @@
             recognized for its role in <em>The Great Gatsby</em>, where it
             reinforced the film’s themes of glamour, longing, and impermanence.
           </p>
+          <figure>
+            <img
+              src="images/91GjOmU7z1L._AC_UF1000,1000_QL80_.jpg"
+              alt="The Great Gatsby 2013 film poster"
+            />
+            <figcaption>
+              <small>The Great Gatsby (2013)</small>
+            </figcaption>
+          </figure>
         </section>
       </aside>
     </main>
@@ -144,4 +159,3 @@
     </footer>
   </body>
 </html>
-
