added icon and gif

--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -19,6 +19,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Young and Beautiful — Lana Del Rey</title>
+    <!-- Favicon / site icon -->
+    <link rel="icon" type="image/png" href="images/5201933.png" />
 
     <!--
       Font embedding service: Google Fonts
@@ -61,6 +63,11 @@
             represents the beauty of youth, the sadness of its fragility, and
             the question of whether love remains when everything else fades.
           </p>
+           <figure>
+            <img
+              src="images/200w.gif"
+            />
+          </figure>
         </section>
 
         <!-- Lyrics excerpt and Spotify embed -->
